--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     .blue-dot {
       width: 10px;
       height: 10px;
-      background-color: rgba(68, 142, 122, 0.4); /* #448e7a → rgba(68, 142, 122, 0.4) */
+      background-color: rgba(68, 142, 122, 0.4);
       border: 2px solid white;
       border-radius: 50%;
       box-shadow:
@@ -74,7 +74,7 @@
 
     .popup-content {
       font-family: "Noto Sans KR", sans-serif;
-      background: white;
+      background: rgba(255, 255, 255, 0.8);
       border-radius: 50px;
       padding: 10px 16px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.15);
