--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
       transform-origin: bottom center;
       will-change: transform;
     }
-
     .user-marker-inner {
       width: 130px;
       height: 130px;
@@ -42,7 +41,9 @@
       background-color: rgba(68, 142, 122, 0.4);
       border: 2px solid white;
       border-radius: 50%;
-      box-shadow: 0 0 10px 5px rgba(68, 142, 122, 0.3), 0 0 30px 15px rgba(68, 142, 122, 0.2);
+      box-shadow:
+        0 0 10px 5px rgba(68, 142, 122, 0.3),
+        0 0 30px 15px rgba(68, 142, 122, 0.2);
       visibility: hidden;
       opacity: 0;
       transition: visibility 0s, opacity 0.3s ease-in-out;
@@ -57,40 +58,40 @@
       animation: bounce 0.6s infinite;
     }
 
-    .image-card {
-      position: absolute;
-      top: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      z-index: 9999;
-      width: 320px;
-      background: white;
-      border-radius: 16px;
-      box-shadow: 0 4px 16px rgba(0,0,0,0.2);
-      overflow: hidden;
-      font-family: 'Noto Sans KR', sans-serif;
+    .mapboxgl-popup-tip {
+      display: none !important; /* ← 꼭짓점 제거 */
+    }
+    
+    .mapboxgl-popup-content {
+      background: transparent;
+      box-shadow: none;
+      padding: 0;
     }
 
-    .image-card img {
-      width: 100%;
-      display: block;
+    .mapboxgl-popup-close-button {
+      display: none;
     }
 
-    .image-card .close-button {
-      position: absolute;
-      top: 8px;
-      right: 12px;
-      background: #fff;
-      border: none;
-      font-size: 20px;
-      font-weight: bold;
+    .popup-content {
+      font-family: "Noto Sans KR", sans-serif;
+      background: rgba(255, 255, 255, 0.9);
+      border-radius: 50px;
+      padding: 10px 16px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+      color:#448e7a;
+      font-weight: 600;
+      font-size: 1.4em;
+      text-align: center;
       cursor: pointer;
+    }
+
+    .popup-content:hover {
+      background: #f2f2f2;
     }
   </style>
 </head>
 <body>
 <div id="map"></div>
-<div id="imageCardContainer"></div>
 <script>
   mapboxgl.accessToken = 'pk.eyJ1IjoidGFrZWJ1Y2hpaGFydSIsImEiOiJjbThyOWk5bnowamx1MmtzY3NqM3h4NGg1In0.z8tX24NQPHkZY_GwSLsc9Q';
 
@@ -110,7 +111,34 @@
     bearing: 314
   });
 
-  let markerElements = [], blueDotMarkers = [];
+  let isUserInteracting = false;
+  let userMarker = null;
+  let activePopup = null;
+
+  const markerElements = [];
+  const blueDotMarkers = [];
+
+  function showPopup(markerData) {
+    if (activePopup) activePopup.remove();
+    const html = `<div class="popup-content" ${markerData.url ? `onclick=\"window.open('${markerData.url}', '_blank')\"` : ''}>${markerData.title}</div>`;
+    activePopup = new mapboxgl.Popup({ offset: [0, -10] })
+      .setLngLat([markerData.lng, markerData.lat])
+      .setHTML(html)
+      .addTo(map);
+  }
+
+  map.on('dragstart', () => isUserInteracting = true);
+  map.on('zoomstart', () => isUserInteracting = true);
+  map.on('touchstart', () => isUserInteracting = true);
+  map.on('dragend', () => setTimeout(() => isUserInteracting = false, 2000));
+  map.on('zoomend', () => {
+    setTimeout(() => isUserInteracting = false, 2000);
+    updateMarkerVisibility();
+    if (userMarker) {
+      const userLngLat = userMarker.getLngLat();
+      showPopupIfNearby(userLngLat.lng, userLngLat.lat);
+    }
+  });
 
   map.on('load', () => {
     const tiles = [
@@ -126,21 +154,22 @@
     ];
     tiles.forEach(tile => {
       map.addSource(tile.id, { type: 'image', url: tile.url, coordinates: tile.coords });
-      map.addLayer({ id: tile.id, type: 'raster', source: tile.id });
+      map.addLayer({ id: tile.id, type: 'raster', source: tile.id, paint: { 'raster-opacity': 1 } });
     });
+    updateMarkerVisibility();
   });
 
   const markers = [
-    { lng: 126.79009, lat: 37.50089, img: 'cns1.png', title: '푸른꿈의 정원' },
-    { lng: 126.79139, lat: 37.50200, img: 'cns2.png', title: '맞이정원' },
-    { lng: 126.78976, lat: 37.50240, img: 'cs1.png', title: '구름정원' },
-    { lng: 126.78835, lat: 37.50166, img: 'cs2.png', title: '해봄정원' },
-    { lng: 126.79242, lat: 37.50066, img: 'lw1.png', title: '기업쇼륨' },
-    { lng: 126.78995, lat: 37.49911, img: 'lw2.png', title: '바이오월 페어' },
-    { lng: 126.78962, lat: 37.50340, img: 'ho1.png', title: '베란다 정원' }
+    { lng: 126.79009, lat: 37.50089, img: 'cns1.png', title: '도시와 자연의 노래<br>푸른꿈의 정원', url: 'https://botanicpark.seoul.go.kr/front/main.do' },
+    { lng: 126.79139, lat: 37.50200, img: 'cns2.png', title: '도시와 자연의 노래<br>맞이정원' },
+    { lng: 126.78976, lat: 37.50240, img: 'cs1.png', title: '도시의 하늘정원<br>구름정원' },
+    { lng: 126.78835, lat: 37.50166, img: 'cs2.png', title: '도시의 하늘정원<br>해봄정원' },
+    { lng: 126.79242, lat: 37.50066, img: 'lw1.png', title: '살아 있는 벽의 노래<br>기업쇼륨' },
+    { lng: 126.78995, lat: 37.49911, img: 'lw2.png', title: '살이 있는 벽의 노래<br>바이오월 페어' },
+    { lng: 126.78962, lat: 37.50340, img: 'ho1.png', title: '숨겨진 오아시스<br>베란다 정원' }
   ];
 
-  markers.forEach((m, i) => {
+  markers.forEach(m => {
     const el = document.createElement('div');
     el.className = 'custom-marker';
     const inner = document.createElement('div');
@@ -148,20 +177,81 @@
     inner.style.backgroundImage = `url(${m.img})`;
     el.appendChild(inner);
     new mapboxgl.Marker(el, { offset: [0, -25] }).setLngLat([m.lng, m.lat]).addTo(map);
-    markerElements.push({ el, inner, lng: m.lng, lat: m.lat, title: m.title });
+    markerElements.push({ el, inner, lng: m.lng, lat: m.lat, title: m.title, url: m.url });
 
-    el.addEventListener('click', () => showImageCard(i));
+    const blueDot = document.createElement('div');
+    blueDot.className = 'blue-dot';
+    new mapboxgl.Marker(blueDot).setLngLat([m.lng, m.lat]).addTo(map);
+    blueDotMarkers.push(blueDot);
+
+    el.addEventListener('click', () => showPopup(m));
+    el.addEventListener('touchstart', () => showPopup(m));
   });
 
-  function showImageCard(index) {
-    const container = document.getElementById('imageCardContainer');
-    container.innerHTML = `
-      <div class="image-card">
-        <button class="close-button" onclick="document.getElementById('imageCardContainer').innerHTML = ''">&times;</button>
-        <img src="title${index + 1}.png" alt="Card Image">
-      </div>
-    `;
+  function updateMarkerVisibility() {
+    const zoom = map.getZoom();
+    markerElements.forEach((m, i) => {
+      if (zoom >= 16) {
+        m.el.style.visibility = 'visible';
+        m.el.style.opacity = 1;
+        blueDotMarkers[i].style.visibility = 'hidden';
+        blueDotMarkers[i].style.opacity = 0;
+      } else {
+        m.el.style.visibility = 'hidden';
+        m.el.style.opacity = 0;
+        blueDotMarkers[i].style.visibility = 'visible';
+        blueDotMarkers[i].style.opacity = 1;
+      }
+    });
   }
+
+  function showPopupIfNearby(userLng, userLat) {
+    const zoom = map.getZoom();
+    let nearby = false;
+    markerElements.forEach(m => {
+      const distance = turf.distance([userLng, userLat], [m.lng, m.lat], { units: 'meters' });
+      if (zoom >= 16) {
+        m.inner.classList.remove('bounce');
+        if (distance < 100) m.inner.classList.add('bounce');
+        if (distance < 70) {
+          nearby = true;
+          if (!activePopup || activePopup._lngLat.lng !== m.lng || activePopup._lngLat.lat !== m.lat) {
+            showPopup(m);
+          }
+        }
+      } else {
+        m.inner.classList.remove('bounce');
+      }
+    });
+    if (!nearby && activePopup) {
+      activePopup.remove();
+      activePopup = null;
+    }
+  }
+
+  navigator.geolocation.watchPosition((position) => {
+    const { latitude, longitude } = position.coords;
+    if (!isUserInteracting) map.easeTo({ center: [longitude, latitude], duration: 1000 });
+
+    if (!userMarker) {
+      const el = document.createElement('div');
+      el.className = 'custom-marker';
+      el.style.visibility = 'visible';
+      el.style.opacity = 1;
+      const inner = document.createElement('div');
+      inner.className = 'marker-inner user-marker-inner';
+      inner.style.backgroundImage = 'url(dung1.gif)';
+      el.appendChild(inner);
+      userMarker = new mapboxgl.Marker(el, { offset: [0, -25] }).setLngLat([longitude, latitude]).addTo(map);
+    } else {
+      userMarker.setLngLat([longitude, latitude]);
+    }
+    showPopupIfNearby(longitude, latitude);
+  }, error => console.error("Geolocation error:", error), {
+    enableHighAccuracy: true,
+    maximumAge: 10000,
+    timeout: 10000
+  });
 </script>
 </body>
 </html>
